@startuml
!pragma layout smetana
class Main
{
+ void main(String[] args)
}

class Driver
{
- String name
- int Age
+ Driver(String name, int age)
+ String toString()
}

class Car
{
- String make
- String model
- year
- BodyStyle
- Driver driver
+ Driver getDriver()
+ car (String make, String model, int year, String bodyStyle)
+ void setDriver(Driver driver)
+ String toString()
}

Main <|-- Car
Main <|-- Driver
Car <|-- Driver

@enduml
